--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openapi-fetch": "^0.10.2",
+    "parse-link-header": "^2.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
+    "theme-change": "^2.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
