--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "daisyui": "^5.0.9",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "openapi-fetch": "^0.13.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-tailwindcss-datepicker": "^2.0.0",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^4.1.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
   },
