--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "openapi-fetch": "^0.13.5",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-tailwindcss-datepicker": "^2.0.0",
     "tailwindcss": "^4.1.1",
+    "theme-change": "^2.5.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
   },
