--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-sigma/core": "^5.0.4",
     "@tailwindcss/vite": "^4.0.17",
     "@types/chart.js": "^2.9.41",
     "chart.js": "^4.4.8",
@@ -18,6 +19,10 @@
     "daisyui": "^5.0.9",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "graphology": "^0.26.0",
+    "graphology-layout": "^0.6.1",
+    "graphology-layout-forceatlas2": "^0.10.1",
+    "graphology-types": "^0.24.8",
     "openapi-fetch": "^0.13.5",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
@@ -25,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "react-tailwindcss-datepicker": "^2.0.0",
+    "sigma": "^3.0.2",
     "tailwindcss": "^4.1.1",
     "theme-change": "^2.5.0",
     "typescript": "~5.7.2",
